Renamed template project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,11 @@ cmake_minimum_required(VERSION 3.10)
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 set_property(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "cmake")
 
-project(delta-template)
+project(beef-planet)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(delta-template WIN32
+add_executable(beef-planet WIN32
     # Source files
     src/main.cpp
     src/template_application.cpp
@@ -18,10 +18,10 @@ add_executable(delta-template WIN32
     include/template_application.h
 )
 
-target_link_libraries(delta-template
+target_link_libraries(beef-planet
     delta-basic)
 
-target_include_directories(delta-template
+target_include_directories(beef-planet
     PUBLIC dependencies/submodules)
 
 add_subdirectory(dependencies)
