--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "dependencies/submodules/delta-studio"]
 	path = dependencies/submodules/delta-studio
 	url = https://github.com/ange-yaghi/delta-studio
+[submodule ".\\dependencies\\submodules\\direct-to-video"]
+	path = .\\dependencies\\submodules\\direct-to-video
+	url = https://github.com/ange-yaghi/direct-to-video
