--- a/dependencies/submodules/CMakeLists.txt
+++ b/dependencies/submodules/CMakeLists.txt
@@ -4,3 +4,10 @@ set_property(TARGET delta-basic PROPERTY FOLDER "delta")
 set_property(TARGET delta-basic-demo PROPERTY FOLDER "delta")
 set_property(TARGET delta-core PROPERTY FOLDER "delta")
 set_property(TARGET delta-physics PROPERTY FOLDER "delta")
+
+if (DTV)
+    add_subdirectory(direct-to-video)
+
+    set_property(TARGET direct-to-video PROPERTY FOLDER "dtv")
+    set_property(TARGET direct-to-video-demo PROPERTY FOLDER "dtv")
+endif (DTV)
